--- a/src/admin/dataKaryawan.html
+++ b/src/admin/dataKaryawan.html
@@ -22,7 +22,7 @@
                   </svg>
                </button>
                <a href="#" class="text-xl font-bold flex items-center lg:ml-2.5">
-               <img src="https://demo.themesberg.com/windster/images/logo.svg" class="h-6 mr-2" alt="Windster Logo">
+               <img src="C:\Users\bowo\Desktop\AbsenKaryawan\Untitled.svg" class="h-6 mr-2 w-10" alt="Windster Logo">
                <span class="self-center whitespace-nowrap">INETMEDIA</span>
                </a>
             </div>
@@ -47,7 +47,7 @@
                            <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                               <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path>
                            </svg>
-                           <span class="ml-3 flex-1 whitespace-nowrap">Data Absensi</span>
+                           <span class="ml-3 flex-1 whitespace-nowrap">Jam Masuk</span>
                         </a>
                      </li>
                      <li>
@@ -55,7 +55,7 @@
                            <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                               <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path>
                            </svg>
-                           <span class="ml-3 flex-1 whitespace-nowrap">Data Karyawan</span>
+                           <span class="ml-3 flex-1 whitespace-nowrap">Jam Pulang</span>
                         </a>
                      </li>
                   </ul>
@@ -70,7 +70,7 @@
    <div class="container mx-auto px-4 sm:px-8 h-full w-full bg-gray-50 relative overflow-y-auto lg:ml-64">
         	<div class="py-8">
             <div>
-                <h2 class="text-2xl font-semibold leading-tight">Data Karyawan</h2>
+                <h2 class="text-2xl font-semibold leading-tight">Jam Pulang</h2>
             </div>
             <div class="my-2 flex md:flex-row flex-col space-x-4">
                 
